# ESP-C6

./: .gitignore  AGENTS.md  DEMOS.md  DEV_MONITOR_README.md  PROJECT_SUMMARY.md  README.md  dev_monitor.sh  esp_flash.sh  get_esp32_ip.py  mcp_client.py  mcp_tcp_client.py  setup_env.sh  setup_esp32c6_sdk.sh  test_mcp_integration.sh
DOCS/: BUILD_AND_FLASH_EXPLAINED.md  COMPONENTS_NEEDED.md  DISPLAY_SETUP.md  FIRMWARE_DUMPING_GUIDE.md
firmware/: partitions.csv  sdkconfig.defaults  wifi-creds.txt
firmware/components/display/: CMakeLists.txt  display_st7789.c  lvgl_driver.c
firmware/components/display/include/: display_st7789.h  lvgl_driver.h
firmware/components/mcp_tcp_transport/: CMakeLists.txt
firmware/components/mcp_tcp_transport/include/: mcp_tcp_transport.h
firmware/components/mcp_tcp_transport/src/: mcp_tcp_transport.c
firmware/components/tinymcp/: CMakeLists.txt
firmware/components/tinymcp/include/: esp32_mcp_server.h  esp32_transport.h  mcp_server_simple.h  mcp_tools.h
firmware/components/tinymcp/port/: mcp_core.cpp  mcp_message.cpp  mcp_session.cpp
firmware/components/tinymcp/src/: display_tool.cpp  esp32_mcp_server.cpp  esp32_transport.cpp  gpio_tool.cpp  mcp_server_simple.c  mcp_tools_simple.c  status_tool.cpp  system_tool.cpp
firmware/components/wifi_manager/: CMakeLists.txt
firmware/components/wifi_manager/include/: wifi_manager.h
firmware/components/wifi_manager/src/: wifi_manager.c
firmware/main/: CMakeLists.txt  firmware.c  firmware.cpp
